--- a/boardgames.html
+++ b/boardgames.html
@@ -63,10 +63,6 @@
             </li>
 			
 			<li class="navbar-item">
-            <a href="lan-party.html" class="navbar-link skewBg" data-nav-link>LAN party</a>
-            </li>
-			
-			<li class="navbar-item">
             <a href="fighting.html" class="navbar-link skewBg" data-nav-link>Fighting game tournament</a>
             </li>
 			
@@ -649,6 +645,18 @@
 
           <li>
             <a href="https://link.webropolsurveys.com/S/4F4C1A261C0F5143" target="_blank" class="footer-link">Contact Us</a>
+          </li>
+		  
+		  <br>
+		  <br>
+		  <br>
+		  
+		  <li>
+            <p class="footer-list-title">Old Events</p>
+          </li>
+
+          <li>
+            <a href="archive.html" target="_blank" class="footer-link">Archive</a>
           </li>
 
         </ul>
