--- a/archive.html
+++ b/archive.html
@@ -28,6 +28,66 @@
   -->
 </head>
 
+	<!-- 
+	-----------------------------------------------
+    #HEADER
+	-----------------------------------------------
+	-->
+
+
+
+  <header class="header">
+    
+    <div class="header-bottom skewBg" data-header>
+      <div class="container">
+
+        <a href="home.html" class="logo">Kaptam</a>
+
+        <nav class="navbar" data-navbar>
+          <ul class="navbar-list">
+
+            <li class="navbar-item">
+              <a href="home.html" class="navbar-link skewBg" data-nav-link>Home</a>
+            </li>
+			
+			<li class="navbar-item">
+            <a href="boardgames.html" class="navbar-link skewBg" data-nav-link>Board games club</a>
+            </li>
+			
+			<li class="navbar-item">
+            <a href="videogames.html" class="navbar-link skewBg" data-nav-link>Video games club</a>
+            </li>
+			
+			<li class="navbar-item">
+            <a href="roleplaying.html" class="navbar-link skewBg" data-nav-link>Role-playing club</a>
+            </li>
+			
+			<li class="navbar-item">
+            <a href="fighting.html" class="navbar-link skewBg" data-nav-link>Fighting game tournament</a>
+            </li>
+			
+			<li class="navbar-item">
+            <a href="arkisto.html" class="navbar-link skewBg" data-nav-link>Fin</a>
+            </li>
+
+          </ul>
+        </nav>
+
+        <div class="header-actions">
+
+
+          <button class="nav-toggle-btn" aria-label="toggle menu" data-nav-toggler>
+            <ion-icon name="menu-outline" class="menu"></ion-icon>
+            <ion-icon name="close-outline" class="close"></ion-icon>
+          </button>
+
+        </div>
+
+      </div>
+	  
+    </div>
+
+  </header>
 
 
   <main>
