--- a/arkisto.html
+++ b/arkisto.html
@@ -28,7 +28,66 @@
   -->
 </head>
 
+	<!-- 
+	-----------------------------------------------
+    #HEADER
+	-----------------------------------------------
+	-->
 
+
+
+  <header class="header">
+    
+    <div class="header-bottom skewBg" data-header>
+      <div class="container">
+
+        <a href="index.html" class="logo">Kaptam</a>
+
+        <nav class="navbar" data-navbar>
+          <ul class="navbar-list">
+
+            <li class="navbar-item">
+              <a href="index.html" class="navbar-link skewBg" data-nav-link>Etusivu</a>
+            </li>
+			
+			<li class="navbar-item">
+            <a href="lautapeli.html" class="navbar-link skewBg" data-nav-link>Lautapelikerho</a>
+            </li>
+			
+			<li class="navbar-item">
+            <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Videopelikerho</a>
+            </li>
+			
+			<li class="navbar-item">
+              <a href="roolipeli.html" class="navbar-link skewBg" data-nav-link>Roolipelikerho</a>
+            </li>
+			
+			<li class="navbar-item">
+            <a href="tappelu.html" class="navbar-link skewBg" data-nav-link>Taistelupeli-turnaus</a>
+            </li>
+			
+			<li class="navbar-item">
+            <a href="archive.html" class="navbar-link skewBg" data-nav-link>Eng</a>
+            </li>
+
+          </ul>
+        </nav>
+
+        <div class="header-actions">
+
+
+          <button class="nav-toggle-btn" aria-label="toggle menu" data-nav-toggler>
+            <ion-icon name="menu-outline" class="menu"></ion-icon>
+            <ion-icon name="close-outline" class="close"></ion-icon>
+          </button>
+
+        </div>
+
+      </div>
+	  
+    </div>
+
+  </header>
 
   <main>
     <article>
