--- a/home.html
+++ b/home.html
@@ -315,6 +315,14 @@
               <a href="./assets/pdf/kaptam_gamers_ry_rules.pdf" class="item-text">Text : Association Rules</a>
             </li>
 
+			<li class="contact-item">
+              <div class="contact-icon">
+                <ion-icon name="save-outline"></ion-icon>
+              </div>
+
+              <a href="https://drive.google.com/drive/folders/10oNQlse6Te3afM2i28CCFx_4Bhn5Coc1?usp=drive_link" class="item-text">Link : Mediabank</a>
+            </li>
+
           </ul>
 
         </div>
