group en and fi

--- a/en/lan-party.html
+++ b/en/lan-party.html
@@ -10,9 +10,9 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon2.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="../favicon2.png" type="image/svg+xml">
 
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 
   <!-- 
     - google font link
@@ -69,7 +69,7 @@
             </li>
 			
 			<li class="navbar-item">
-            <a href="lanit.html" class="navbar-link skewBg" data-nav-link>Fin</a>
+            <a href="../fi/lanit.html" class="navbar-link skewBg" data-nav-link>Fin</a>
             </li>
 
           </ul>
@@ -110,7 +110,7 @@
 
 	  
        <section class="section hero" id="home" aria-label="home"
-        style="background-image: url('./assets/images/lan-party-background.jpg')">
+        style="background-image: url('../assets/images/lan-party-background.jpg')">
         <div class="container">
 
           <div class="hero-content">
@@ -142,7 +142,7 @@
 			The event is supported by Lahti's Pohjoinen Kumppanuuspöytä
 			<br>
 			<a href="https://www.lahti.fi/kaupunki-ja-paatoksenteko/osallistu-ja-vaikuta/osallisuusmalli/kumppanuuspoydat/" target="_blank">
-			<img src="./assets/images/lan-party_images/lahti.png" width="300" height="200" loading="lazy" align="left"></a>
+			<img src="../assets/images/lan-party_images/lahti.png" width="300" height="200" loading="lazy" align="left"></a>
 			<br>
 			<br>
 			<br>
@@ -208,7 +208,7 @@
 	  
 	  
       <section class="section hero" id="about" aria-label="about"
-        style="background-image: url('./assets/images/gaming-banner-2.jpg')">
+        style="background-image: url('../assets/images/gaming-banner-2.jpg')">
 		<br>
 		<br>
 		<div class="container">
@@ -264,7 +264,7 @@
 			<br>
 			<br>
 			</div>
-					<img src="./assets/images/2e.png" class="img2" alt="2 €" width="300" height="300" loading="lazy">
+					<img src="../assets/images/2e.png" class="img2" alt="2 €" width="300" height="300" loading="lazy">
 				
 						<br>
 					<p class="hero-text" style="font-size: 40px;"><b>
@@ -302,7 +302,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 360;">
-                  <img src="./assets/images/lan-party_images/gallery-2.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/lan-party_images/gallery-2.jpg" width="450" height="600" loading="lazy"
                     class="img-cover">
                 </figure>
 
@@ -315,7 +315,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 360;">
-                  <img src="./assets/images/lan-party_images/gallery-1.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/lan-party_images/gallery-1.jpg" width="450" height="600" loading="lazy"
                     class="img-cover">
                 </figure>
 
@@ -328,7 +328,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 360;">
-                  <img src="./assets/images/lan-party_images/gallery-3.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/lan-party_images/gallery-3.jpg" width="450" height="600" loading="lazy"
                     class="img-cover">
                 </figure>
               </div>
@@ -362,7 +362,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 300;">
-                  <img src="./assets/images/lan-party_images/gallery-4.jpg" width="300" height="300" loading="lazy"
+                  <img src="../assets/images/lan-party_images/gallery-4.jpg" width="300" height="300" loading="lazy"
                     class="img-cover">
                 </figure>
 
@@ -375,7 +375,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 300;">
-                  <img src="./assets/images/lan-party_images/gallery-7.jpg" width="300" height="300" loading="lazy"
+                  <img src="../assets/images/lan-party_images/gallery-7.jpg" width="300" height="300" loading="lazy"
                     class="img-cover">
                 </figure>
 
@@ -388,7 +388,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 300;">
-                  <img src="./assets/images/lan-party_images/gallery-5.jpg" width="300" height="300" loading="lazy"
+                  <img src="../assets/images/lan-party_images/gallery-5.jpg" width="300" height="300" loading="lazy"
                     class="img-cover">
                 </figure>
               </div>
@@ -466,7 +466,7 @@
                 <ion-icon name="document-outline"></ion-icon>
               </div>
 
-              <a href="./assets/pdf/kaptam_gamers_ry_rules.pdf" class="item-text">Text : Association Rules</a>
+              <a href="../assets/pdf/kaptam_gamers_ry_rules.pdf" class="item-text">Text : Association Rules</a>
             </li>
 
           </ul>
@@ -560,7 +560,7 @@
   <!-- 
     - custom js link
   -->
-  <script src="./assets/js/script.js" defer></script>
+  <script src="../assets/js/script.js" defer></script>
   
 
   <!-- 
