--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -10,9 +10,9 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon3.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="../favicon3.png" type="image/svg+xml">
 
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 
   <!-- 
     - google font link
@@ -65,7 +65,7 @@
             </li>
 			
 			<li class="navbar-item">
-            <a href="fighting.html" class="navbar-link skewBg" data-nav-link>Eng</a>
+            <a href="../en/fighting.html" class="navbar-link skewBg" data-nav-link>Eng</a>
             </li>
 
           </ul>
@@ -107,7 +107,7 @@
 
 	  
        <section class="section hero" id="home" aria-label="home"
-        style="background-image: url('./assets/images/fighting-background2.jpg')">
+        style="background-image: url('../assets/images/fighting-background2.jpg')">
         <div class="container">
 
           <div class="hero-content">
@@ -197,7 +197,7 @@
 	  
 	  
       <section class="section hero" id="about" aria-label="about"
-        style="background-image: url('./assets/images/fighting-banner-2.jpg')">
+        style="background-image: url('../assets/images/fighting-banner-2.jpg')">
 		<br>
 		<br>
 		<div class="container">
@@ -358,7 +358,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-10.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-10.jpg" width="450" height="600" loading="lazy"
                     class="img-cover">
                 </figure>
 
@@ -370,7 +370,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-11.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-11.jpg" width="450" height="600" loading="lazy"
                     class="img-cover">
                 </figure>
 
@@ -382,7 +382,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-13.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-13.jpg" width="450" height="600" loading="lazy"
                     class="img-cover">
                 </figure>
               </div>
@@ -395,7 +395,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-15.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-15.jpg" width="450" height="600" loading="lazy"
                     class="img-cover">
                 </figure>
 
@@ -407,7 +407,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-12.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-12.jpg" width="450" height="600" loading="lazy"
                     class="img-cover">
                 </figure>
 
@@ -419,7 +419,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-14.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-14.jpg" width="450" height="600" loading="lazy"
                     class="img-cover">
                 </figure>
               </div>
@@ -454,7 +454,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-4.jpg" width="300" height="300" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-4.jpg" width="300" height="300" loading="lazy"
                     class="img-cover">
                 </figure>
 				
@@ -474,7 +474,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-5.jpg" width="300" height="300" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-5.jpg" width="300" height="300" loading="lazy"
                     class="img-cover">
                 </figure>
 
@@ -494,7 +494,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-6.jpg" width="300" height="300" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-6.jpg" width="300" height="300" loading="lazy"
                     class="img-cover">
                 </figure>
               </div>
@@ -514,7 +514,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-7.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-7.jpg" width="450" height="600" loading="lazy"
                     class="img-cover" alt="Street Fighter 30th Anniversary Collection and Ultra Street Fighter 4">
                 </figure>
 
@@ -526,7 +526,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-8.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-8.jpg" width="450" height="600" loading="lazy"
                     class="img-cover">
                 </figure>
 
@@ -538,7 +538,7 @@
               <div class="latest-game-card">
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
-                  <img src="./assets/images/fighting_images/gallery-9.jpg" width="450" height="600" loading="lazy"
+                  <img src="../assets/images/fighting_images/gallery-9.jpg" width="450" height="600" loading="lazy"
                     class="img-cover">
                 </figure>
               </div>
@@ -617,15 +617,7 @@
                 <ion-icon name="document-outline"></ion-icon>
               </div>
 
-              <a href="./assets/pdf/kaptam_gamers_ry_saannot.pdf" class="item-text">Teksti : Yhdistyksen säännöt</a>
-            </li>
-
-			<li class="contact-item">
-              <div class="contact-icon">
-                <ion-icon name="save-outline"></ion-icon>
-              </div>
-
-              <a href="https://drive.google.com/drive/folders/10oNQlse6Te3afM2i28CCFx_4Bhn5Coc1?usp=drive_link" class="item-text">Linkki : Mediapankki</a>
+              <a href="../assets/pdf/kaptam_gamers_ry_saannot.pdf" class="item-text">Teksti : Yhdistyksen säännöt</a>
             </li>
 
           </ul>
@@ -731,7 +723,7 @@
   <!-- 
     - custom js link
   -->
-  <script src="./assets/js/script.js" defer></script>
+  <script src="../assets/js/script.js" defer></script>
   
 
   <!-- 
