--- a/en/fighting2.html
+++ b/en/fighting2.html
@@ -43,7 +43,7 @@
     <div class="header-bottom skewBg" data-header>
       <div class="container">
 
-        <a href="index.html" class="logo">Kaptam</a>
+        <a href="home.html" class="logo">Kaptam</a>
 
         <nav class="navbar" data-navbar>
           <ul class="navbar-list">
