readded the overwritten mediabank

--- a/fi/tappelu2.html
+++ b/fi/tappelu2.html
@@ -520,7 +520,13 @@
 
               <a href="../assets/pdf/kaptam_gamers_ry_saannot.pdf" class="item-text">Teksti : Yhdistyksen säännöt</a>
             </li>
+      <li class="contact-item">
+              <div class="contact-icon">
+                <ion-icon name="save-outline"></ion-icon>
+              </div>
 
+              <a href="https://drive.google.com/drive/folders/10oNQlse6Te3afM2i28CCFx_4Bhn5Coc1?usp=drive_link" class="item-text">Linkki : Mediapankki</a>
+            </li>
           </ul>
 
         </div>
