--- a/en/archive.html
+++ b/en/archive.html
@@ -112,7 +112,7 @@
 
           <div class="hero-content">
 
-			<a href="fighting2.html">
+			<a href="archive/fighting2.html">
             <h1 class="h1 hero-title4" style="font-size: 40px;">
               Fighting Game Tournament <span class="span">Tekken 3</span>  
 			  <br>
@@ -123,7 +123,7 @@
 			<br>
 			<br>
 			
-			<a href="lan-party.html">
+			<a href="archive/lan-party.html">
             <h1 class="h1 hero-title4" style="font-size: 40px;">
               Kaptam Winter <span class="span">LAN Party</span> 
 			  <br>
