added archive, actually works this time

--- a/fi/arkisto.html
+++ b/fi/arkisto.html
@@ -113,7 +113,7 @@
 
 
 			
-			<a href="arkisto/tappelu2.html">
+			<a href="../arkisto/tappelu2.html">
             <h1 class="h1 hero-title4" style="font-size: 55px;">
               Taistelupeli turnaus <span class="span">Tekken 3</span>  
 			  <br>
@@ -124,7 +124,7 @@
 			<br>
 			<br>
 
-			<a href="arkisto/lanit.html">
+			<a href="../arkisto/lanit.html">
             <h1 class="h1 hero-title4" style="font-size: 55px;">
               Kaptam Winter <span class="span">Lanit</span> 
 			  <br>
