htaccess and made redirects work

--- a/arkisto/tappelu2.html
+++ b/arkisto/tappelu2.html
@@ -49,7 +49,7 @@
           <ul class="navbar-list">
 
             <li class="navbar-item">
-              <a href="etusivu.html" class="navbar-link skewBg" data-nav-link>Etusivu</a>
+              <a href="index.html" class="navbar-link skewBg" data-nav-link>Etusivu</a>
             </li>
 			
 			<li class="navbar-item">
