--- a/arkisto/lanit.html
+++ b/arkisto/lanit.html
@@ -142,7 +142,7 @@
 			Tapahtumaa tukee Lahden Pohjoinen Kumppanuuspöytä
 			<br>
 			<a href="https://www.lahti.fi/kaupunki-ja-paatoksenteko/osallistu-ja-vaikuta/osallisuusmalli/kumppanuuspoydat/" target="_blank">
-			<img src="./assets/images/lan-party_images/lahti.png" width="300" height="200" loading="lazy" align="left"></a>
+			<img src="../assets/images/lan-party_images/lahti.png" width="300" height="200" loading="lazy" align="left"></a>
 			<br>
 			<br>
 			<br>
