--- a/en/fighting.html
+++ b/en/fighting.html
@@ -221,10 +221,20 @@
 					<br>
 					Super Street Fighter 2 Turbo
 					</span>
-					<span align="lef">
+					<span align="left" style="font-size: 12px;">
 					~ Rules ~ 
 					<br>
-					Will come later
+					The tournament format is double elimination. If you lose once you aren't out of the tournament yet, but lose again and you are eliminated from the tournament
+					<br>
+					You can bring your own controllers for the tournament
+					<br>
+					The sets are ft2
+					<br>
+					After a match the losing player can switch characters. Winner has to stay on the character they have chosen
+					<br>
+					Akuma/Gouki is banned. Everybody else is allowed for play.
+					<br>
+					Winner of the tournament has to face a worthy opponent once again.
 					</span>
 					<span align="left">
 					~ Last tournament bracket ~ 
