--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -222,10 +222,18 @@
 					<br>
 					Super Street Fighter 2 Turbo
 					</span>
-					<span align="left">
+					<span align="left" style="font-size: 12px;">
 					~ Säännöt ~ 
 					<br>
-					Tulee myöhemmin
+					Turnausmuoto on tuplapudotus. Jos häviät kerran, et ole vielä poissa turnauksesta, mutta häviät uudelleen ja putoat turnauksesta
+					<br>
+					Voit tuoda oman ohjaimen turnaukseen
+					<br>
+					Matsit ovat ft2 (ensimmäinen, joka voittaa 2 kertaa)
+					<br>
+					Yhden matsin jälkeen, hävinnyt pelaaja voi vaihtaa hahmoa. Voittanut pelaajan pitää pelata samalla hahmolla kuin viime matsissa.
+					<br>
+					Akuma/Gouki hahmoilla pelaaminen on kielletty. Kaikilla muilla hahmoilla voi pelata.
 					</span>
 					<span align="left">
 					~ Viime turnauksen haarukointi ~ 
