Heikki ver 0.84 small tweak
Bit fiddled with "~ Last tournament bracket ~" text section.

--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -238,9 +238,8 @@
 					<span align="left">
 					~ Viime turnauksen haarukointi ~ 
 					<br>
-					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Challonge</u></a> 
 					31.01.2025 - Tekken 3
-					<br>
+					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
 					<br>
 					Taistelupeli-turnaus on tehty ammattilais taistelupelaajan avustamana, YaBoiSpades
 			</span>
