--- a/en/fighting.html
+++ b/en/fighting.html
@@ -239,9 +239,8 @@
 					<span align="left">
 					~ Last tournament bracket ~ 
 					<br>
-					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Challonge</u></a> 
 					31.01.2025 - Tekken 3
-					<br>
+					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
 					<br>
 					Fighting Game tournament is made with the help of a professional fighting game player, YaBoiSpades
 			</span>
