--- a/en/fighting.html
+++ b/en/fighting.html
@@ -232,7 +232,7 @@
 					<br>
 					After a match the losing player can switch characters. Winner has to stay on the character they have chosen
 					<br>
-					Akuma/Gouki is banned. Everybody else is allowed for play.
+					Akuma/Gouki is banned. Everybody else is allowed for play
 					</span>
 					<span align="left">
 					~ Last tournament bracket ~ 
