heikki ver 0.84 small add
Väinö wants that part in, so added it in

--- a/en/fighting.html
+++ b/en/fighting.html
@@ -233,6 +233,8 @@
 					After a match the losing player can switch characters. Winner has to stay on the character they have chosen
 					<br>
 					Akuma/Gouki is banned. Everybody else is allowed for play
+					<br>
+					Winner of the tournament has to face a strong opponent in a test of skill. If you lose, you still get the prize money, but miss out on bragging rights.
 					</span>
 					<span align="left">
 					~ Last tournament bracket ~ 
