--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -234,6 +234,8 @@
 					Yhden matsin jälkeen, hävinnyt pelaaja voi vaihtaa hahmoa. Voittanut pelaajan pitää pelata samalla hahmolla kuin viime matsissa.
 					<br>
 					Akuma/Gouki hahmoilla pelaaminen on kielletty. Kaikilla muilla hahmoilla voi pelata.
+					<br>
+					Turnauksen voittajan on kohtaa vahva vastustaja. Jos häviät, saat silti palkintorahat, mutta menetät kehumisoikeudet.
 					</span>
 					<span align="left">
 					~ Viime turnauksen haarukointi ~ 
