--- a/en/fighting.html
+++ b/en/fighting.html
@@ -234,7 +234,7 @@
 					<br>
 					Akuma/Gouki is banned. Everybody else is allowed for play
 					<br>
-					Winner of the tournament has to face a strong opponent in a test of skill. If you lose, you still get the prize money, but miss out on bragging rights.
+					Winner of the tournament has to face a strong opponent in a test of skill. If you lose, you still get the prize money, but miss out on bragging rights
 					</span>
 					<span align="left">
 					~ Last tournament bracket ~ 
