--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -235,7 +235,7 @@
 					<br>
 					Akuma/Gouki hahmoilla pelaaminen on kielletty. Kaikilla muilla hahmoilla voi pelata.
 					<br>
-					Turnauksen voittajan on kohtaa vahva vastustaja. Jos häviät, saat silti palkintorahat, mutta menetät kehumisoikeudet.
+					Turnauksen voittaja kohtaa vahvan vastustaja. Jos häviät, saat silti palkintorahat, mutta menetät kehumisoikeudet.
 					</span>
 					<span align="left">
 					~ Viime turnauksen haarukointi ~ 
