--- a/en/fighting.html
+++ b/en/fighting.html
@@ -237,6 +237,12 @@
 					Winner of the tournament has to face a strong opponent in a test of skill. If you lose, you still get the prize money, but miss out on bragging rights
 					</span>
 					<span align="left">
+					~ Tips and info PDF ~ 
+					<br>
+					<a href="../assets/pdf/super_street_fighter_2_turbo_general_tips_and_info.pdf" target="_blank" style="color: DodgerBlue;">
+					General tips and information for playing Super Street Fighter 2 Turbo
+					</a>
+					<br>
 					~ Last tournament bracket ~ 
 					<br>
 					31.01.2025 - Tekken 3
