--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -238,6 +238,12 @@
 					Turnauksen voittaja kohtaa vahvan vastustaja. Jos häviät, saat silti palkintorahat, mutta menetät kehumisoikeudet.
 					</span>
 					<span align="left">
+					~ Opastus PDF ~ 
+					<br>
+					<a href="../assets/pdf/super_street_fighter_2_turbo_general_tips_and_info.pdf" target="_blank" style="color: DodgerBlue;">
+					Yleisiä ohjeita ja vinkkejä Super Street Fighter 2 Turbo:n pelaamiseen (englanniksi)
+					</a>
+					<br>
 					~ Viime turnauksen haarukointi ~ 
 					<br>
 					31.01.2025 - Tekken 3
