--- a/en/videogames.html
+++ b/en/videogames.html
@@ -452,6 +452,8 @@
 					</b>
 						<br>
 					Heikki Kaperi
+					<span style="font-size: 1px; background: none; margin-top: -14px;"> </span>
+					<a href="mailto:heikki@kaptam.fi" class="item-text">heikki@kaptam.fi</a>
 					</p>
 			</div>	
 			<div class="float-child">	
@@ -460,10 +462,11 @@
 					
 					<br>
 					<p class="hero-text"><b>
-					Head of technology
+					<a href="https://github.com/Kyouma960">Head of technology
 					</b>
-					<br>
-					<a href="https://github.com/Kyouma960">Nitesh Gautam</a>
+					Nitesh Gautam</a>
+					<span style="font-size: 1px; background: none; margin-top: -14px;"> </span>
+					<a href="mailto:nitesh@kaptam.fi" class="item-text">nitesh@kaptam.fi</a>
 					</p>
 			</div>
 		</div>
