--- a/fi/lautapeli.html
+++ b/fi/lautapeli.html
@@ -375,19 +375,21 @@
 					</b>
 						<br>
 					Heikki Kaperi
+					<span style="font-size: 1px; background: none; margin-top: -14px;"> </span>
+					<a href="mailto:heikki@kaptam.fi" class="item-text">heikki@kaptam.fi</a>
 					</p>
-                    </div>
-			<div class="float-child">
-	
+			</div>	
+			<div class="float-child">	
 										
 					<img src="../assets/images/nitesh.jpg" class="img" alt="Nitesh Gautam" width="150" height="150" loading="lazy">
 					
 					<br>
 					<p class="hero-text"><b>
-					Tekniikan johtaja
+					<a href="https://github.com/Kyouma960">Tekniikan johtaja
 					</b>
-					<br>
-					<a href="https://github.com/Kyouma960">Nitesh Gautam</a>
+					Nitesh Gautam</a>
+					<span style="font-size: 1px; background: none; margin-top: -14px;"> </span>
+					<a href="mailto:nitesh@kaptam.fi" class="item-text">nitesh@kaptam.fi</a>
 					</p>
 			</div>
 		</div>
