--- a/fi/videopeli.html
+++ b/fi/videopeli.html
@@ -450,6 +450,8 @@
 					</b>
 						<br>
 					Heikki Kaperi
+					<span style="font-size: 1px; background: none; margin-top: -14px;"> </span>
+					<a href="mailto:heikki@kaptam.fi" class="item-text">heikki@kaptam.fi</a>
 					</p>
 			</div>	
 			<div class="float-child">	
@@ -458,10 +460,11 @@
 					
 					<br>
 					<p class="hero-text"><b>
-					Tekniikan johtaja
+					<a href="https://github.com/Kyouma960">Tekniikan johtaja
 					</b>
-					<br>
-					<a href="https://github.com/Kyouma960">Nitesh Gautam</a>
+					Nitesh Gautam</a>
+					<span style="font-size: 1px; background: none; margin-top: -14px;"> </span>
+					<a href="mailto:nitesh@kaptam.fi" class="item-text">nitesh@kaptam.fi</a>
 					</p>
 			</div>
 		</div>
@@ -472,6 +475,7 @@
 
 		<!-- 
 		-----------------------------------------------
+							
         #Gallery
 		-----------------------------------------------
 		-->
