--- a/fi/lautapeli.html
+++ b/fi/lautapeli.html
@@ -384,8 +384,9 @@
 					<img src="../assets/images/nitesh.jpg" class="img" alt="Nitesh Gautam" width="150" height="150" loading="lazy">
 					
 					<br>
+					<a href="https://github.com/Kyouma960">
 					<p class="hero-text"><b>
-					<a href="https://github.com/Kyouma960">Tekniikan johtaja
+					Tekniikan johtaja
 					</b>
 					Nitesh Gautam</a>
 					<span style="font-size: 1px; background: none; margin-top: -20px;"> </span>
