--- a/en/boardgames.html
+++ b/en/boardgames.html
@@ -385,12 +385,14 @@
 					<img src="../assets/images/nitesh.jpg" class="img" alt="Nitesh Gautam" width="150" height="150" loading="lazy">
 					
 					<br>
+					<a href="https://github.com/Kyouma960">
 					<p class="hero-text"><b>
-					<a href="https://github.com/Kyouma960">Head of technology
+					Head of technology
 					</b>
 					Nitesh Gautam</a>
 					<span style="font-size: 1px; background: none; margin-top: -20px;"> </span>
 					<a href="mailto:nitesh@kaptam.fi" class="item-text">nitesh@kaptam.fi</a>
+					</p>
 			</div>
 		</div>
             
