--- a/en/videogames.html
+++ b/en/videogames.html
@@ -452,7 +452,7 @@
 					</b>
 						<br>
 					Heikki Kaperi
-					<span style="font-size: 1px; background: none; margin-top: -20px;"> </span>
+					<span style="background: none; margin-top: -20px;"> </span>
 					<a href="mailto:heikki@kaptam.fi" class="item-text">heikki@kaptam.fi</a>
 					</p>
 			</div>	
@@ -461,11 +461,12 @@
 					<img src="../assets/images/nitesh.jpg" class="img" alt="Nitesh Gautam" width="150" height="150" loading="lazy">
 					
 					<br>
+					<a href="https://github.com/Kyouma960">
 					<p class="hero-text"><b>
-					<a href="https://github.com/Kyouma960">Head of technology
+					Head of technology
 					</b>
 					Nitesh Gautam</a>
-					<span style="font-size: 1px; background: none; margin-top: -20px;"> </span>
+					<span style="background: none; margin-top: -20px;"> </span>
 					<a href="mailto:nitesh@kaptam.fi" class="item-text">nitesh@kaptam.fi</a>
 					</p>
 			</div>
