--- a/en/boardgames.html
+++ b/en/boardgames.html
@@ -376,7 +376,7 @@
 					</b>
 						<br>
 					Heikki Kaperi
-					<span style="font-size: 1px; background: none; margin-top: -20px;"> </span>
+					<span style="background: none; margin-top: -20px;"> </span>
 					<a href="mailto:heikki@kaptam.fi" class="item-text">heikki@kaptam.fi</a>
 					</p>
 			</div>	
@@ -389,8 +389,9 @@
 					<p class="hero-text"><b>
 					Head of technology
 					</b>
+					<br>
 					Nitesh Gautam</a>
-					<span style="font-size: 1px; background: none; margin-top: -20px;"> </span>
+					<span style="background: none; margin-top: -20px;"> </span>
 					<a href="mailto:nitesh@kaptam.fi" class="item-text">nitesh@kaptam.fi</a>
 					</p>
 			</div>
