--- a/fi/lautapeli.html
+++ b/fi/lautapeli.html
@@ -375,7 +375,7 @@
 					</b>
 						<br>
 					Heikki Kaperi
-					<span style="font-size: 1px; background: none; margin-top: -20px;"> </span>
+					<span style="background: none; margin-top: -20px;"> </span>
 					<a href="mailto:heikki@kaptam.fi" class="item-text">heikki@kaptam.fi</a>
 					</p>
 			</div>	
@@ -388,8 +388,9 @@
 					<p class="hero-text"><b>
 					Tekniikan johtaja
 					</b>
+					<br>
 					Nitesh Gautam</a>
-					<span style="font-size: 1px; background: none; margin-top: -20px;"> </span>
+					<span style="background: none; margin-top: -20px;"> </span>
 					<a href="mailto:nitesh@kaptam.fi" class="item-text">nitesh@kaptam.fi</a>
 					</p>
 			</div>
