--- a/en/archive.html
+++ b/en/archive.html
@@ -131,6 +131,17 @@
             </h1>
 			</a>
 			
+      <br>
+			<br>
+
+			<a href="../archive/fightingsf2st.html">
+            <h1 class="h1 hero-title4" style="font-size: 40px;">
+              Fighting Game Tournament <span class="span">Super Street Fighter 2 Turbo</span> 
+			  <br>
+			  7.3.2025
+            </h1>
+			</a>
+
 		   </div>
 		   
 		</div>
