--- a/fi/arkisto.html
+++ b/fi/arkisto.html
@@ -111,7 +111,10 @@
 
           <div class="hero-content">
 
-
+			<br>
+			<br>
+      <br>
+      <br>
 			
 			<a href="../arkisto/tappelu2.html">
             <h1 class="h1 hero-title4" style="font-size: 55px;">
@@ -129,6 +132,17 @@
               Kaptam Winter <span class="span">Lanit</span> 
 			  <br>
 			  14-16.2.2025
+            </h1>
+			</a>
+
+      <br>
+			<br>
+
+			<a href="../arkisto/tappelusf2st.html">
+            <h1 class="h1 hero-title4" style="font-size: 55px;">
+              Taistelupeli turnaus <span class="span" style="font-size: 37px;">Super Street Fighter 2 Turbo</span> 
+			  <br>
+			  7.3.2025
             </h1>
 			</a>
 			
