Form & grammar fix
Changed form to a new ones, and changes grammar here & there.

--- a/en/fighting.html
+++ b/en/fighting.html
@@ -124,7 +124,7 @@
 			Lahti Fisticuffs is a monthly open tournament for new and experienced fighting game players to have fun.
 			<br>
 			<br>
-			Free for anybody over 13 years old to join in
+			Free for anybody over 13 years old to join in.
 			<br>
 			<br>
 			Mukkulankatu 19 
@@ -161,7 +161,7 @@
 			<br>
 			<br>
 
-            <a href="https://link.webropolsurveys.com/S/6AC6B58979677F5E" target="_blank"> <button class="btn skewBg" style="color: black;">
+            <a href="https://link.webropolsurveys.com/S/44ACAC8A4D3C208B" target="_blank"> <button class="btn skewBg" style="color: black;">
 			Fill this form,  
 			<br>
 			if you're inteterest in joining in
@@ -224,10 +224,10 @@
           <br>
 					~ Rules ~ 
 					<br>
-					We'll add them later here
+					We'll add them later
 					<br>
 					<br>
-					~ Last tournament bracket ~  
+					~ Previous tournaments brackets ~  
 					<br>
           07.03.2025 - Super Street Fighter 2 Turbo
 					<a href="https://challonge.com/fi/kaptam2nd" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
@@ -236,7 +236,7 @@
           31.01.2025 - Tekken 3
 					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
 					<br>
-					Fighting Game tournament is made with the help of a professional fighting game player, YaBoiSpades
+					"Lahti Fisticuffs" fighting game tournaments are made with the help of a professional fighting game player, YaBoiSpades
 			</span>
 			</p>
 		  </div>
