--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -124,7 +124,7 @@
 			Lahti Fisticuffs on kuukausittainen avoin turnaus, jossa uudet ja kokeneet taistelupelipelaajat voivat pitää hauskaa.
 			<br>
 			<br>
-			Ilmainen sisäänpääsy ja osallistuminen kaikilta yli 13 vuotiailta
+			Ilmainen sisäänpääsy ja osallistuminen kaikilta yli 13 vuotiailta.
 			<br>
 			<br>
 			Mukkulankatu 19 
@@ -162,7 +162,7 @@
 			<br>
 			<br>
 
-            <a href="https://link.webropolsurveys.com/S/4A5658B3ACAC79A6" target="_blank"> <button class="btn skewBg" style="color: black;">
+            <a href="https://link.webropolsurveys.com/S/E445CF7D8D58B137" target="_blank"> <button class="btn skewBg" style="color: black;">
 			Jos olet kiinnostunut  
 			<br>
 			turnauksesta, täytä
@@ -225,10 +225,10 @@
           <br>
 					~ Säännöt ~ 
 					<br>
-					Lisätään tänne myöhemmin
+					Tulee myöhemmin
 					<br>
 					<br>
-					~ Viime turnauksen haarukointi ~ 
+					~ Viime turnauksien haarukointi ~ 
 					<br>
           07.03.2025 - Super Street Fighter 2 Turbo
 					<a href="https://challonge.com/fi/kaptam2nd" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
@@ -237,7 +237,7 @@
 					31.01.2025 - Tekken 3
 					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
 					<br>
-					Taistelupeli-turnaus on tehty ammattilais taistelupelaajan avustamana, YaBoiSpades
+					"Lahti Fisticuffs" taistelupeli-turnaukset on tehty ammattilais taistelupelaajan avustamana, YaBoiSpades
 			</span>
 			</p>
 		  </div>
