--- a/en/roleplaying.html
+++ b/en/roleplaying.html
@@ -125,18 +125,24 @@
 			to assist us by bi-weekly hosting as game masters for oneshots of 
 			different types of role-playing games.
 			<a href="https://www.pelitoimintaasuomessa.fi/loyda-peliharrastus-1/lahden-roolipelaajat" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Lahden roolipelaajat (links content in finnish)</u></a>
-			For that, we’d like to have enough people 
-			in our role-playing Telegram & WhatsApp channels to have at least 4 people in each bi-weekly session.
+			<br>
+      For that, we’d like to have enough people 
+			in our role-playing Telegram & WhatsApp channels to have at least 4 people in each session.
 			</span></p>
 
             <h1 class="h1 hero-title">
       
             </h1>
 
+            <!--
             <a href="https://t.me/+pNhjexBA6z9kNTU0" target="_blank"> <button class="btn skewBg">Telegram</button></a>
-			<br>
-			<a href="https://chat.whatsapp.com/Jf6cs8sQLww5XgLFuQkTGN" target="_blank"> <button class="btn skewBg">Whatsapp</button></a>
+            -->
 
+      
+          <a href="https://chat.whatsapp.com/Jf6cs8sQLww5XgLFuQkTGN" target="_blank"> <button class="btn skewBg">Whatsapp</button></a>
+          <br>
+          <a href="https://discord.gg/Ahac3BYPyp" target="_blank"> <button class="btn skewBg">Discord</button></a> 
+			
       </section>
 
 
