--- a/fi/index.html
+++ b/fi/index.html
@@ -228,8 +228,16 @@
 					25.04.2025 @ 16:00 Perjantai
 					<br>
 					<br>
-					Kaikki yli 13-vuotiaat voivat osallistua ilmaiseksi. Voit harjoitella videopelikerhon viikkotunteilla perjantaisin Niemenkatu 73 (Lahden Tiedepuisto) aulassa klo 16:00 - 20:00
-                  </p>
+					Kaikki yli 13-vuotiaat voivat osallistua ilmaiseksi
+          <br>
+          <br>
+          Harjoittelu: <br>
+          Voit harjoitella videopelikerhon viikkotunteilla perjantaisin 
+          Niemenkatu 73 (Lahden Tiedepuisto) aulassa klo 16:00 - 20:00
+          <a href="https://maps.app.goo.gl/fhxNVwUgdP3sZAvv9" target="_blank" style="color: DodgerBlue;"><u>Google Maps</u></a>
+          <a href="https://www.youtube.com/watch?v=TklLSU8NPxE" target="_blank" style="color: DodgerBlue; margin-top: 7px">
+          <u>Ohjeet saapumiseen</u></a>
+        </p>
 
                 </div>
 
