--- a/fi/roolipeli.html
+++ b/fi/roolipeli.html
@@ -124,17 +124,21 @@
 			Roolipelaaminen on meille uusi harrastus. Siksi olemme pyytäneet "Lahden roolipelaajat" ryhmän pelinjohtajia
 			auttamaan meitä isännöinnillä erilaisia ​​roolipelejä kahden viikon välein.
 			<a href="https://www.pelitoimintaasuomessa.fi/loyda-peliharrastus-1/lahden-roolipelaajat" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Lahden roolipelaajat</u></a>
-			Sitä varten, haluamme että meillä on tarpeeksi ihmisiä
+			<br>
+      Sitä varten, haluamme että meillä on tarpeeksi ihmisiä
 			meidän roolipeli Telegram & WhatsApp ryhmissä että ainakin 4 henkilöä pääsisi jokaiseen sessioon.
 			</span></p>
 
             <h1 class="h1 hero-title">
       
             </h1>
-
+            <!--
             <a href="https://t.me/+pNhjexBA6z9kNTU0" target="_blank"> <button class="btn skewBg">Telegram</button></a>
-			<br>
-			<a href="https://chat.whatsapp.com/Jf6cs8sQLww5XgLFuQkTGN" target="_blank"> <button class="btn skewBg">Whatsapp</button></a>
+            -->
+
+            <a href="https://chat.whatsapp.com/Jf6cs8sQLww5XgLFuQkTGN" target="_blank"> <button class="btn skewBg">Whatsapp</button></a>
+            <br>
+            <a href="https://discord.gg/Ahac3BYPyp" target="_blank"> <button class="btn skewBg">Discord</button></a> 
 
       </section>
 
