--- a/en/videogames.html
+++ b/en/videogames.html
@@ -394,8 +394,16 @@
 					25.04.2025 Friday @ 16:00
 					<br>
 					<br>
-					Everyone over 13 years old can participate for free. You can train at video game club's weekly sessions on Fridays in the 
+					Everyone over 13 years old can participate for free
+          <br>
+          <br>
+          Training: <br>
+          You can train at video game club's weekly sessions on Fridays in the 
 					Niemenkatu 73 (Lahti's Science Park) lobby @ 16:00 - 20:00
+          <a href="https://maps.app.goo.gl/fhxNVwUgdP3sZAvv9" target="_blank" style="color: DodgerBlue;"><u>Google Maps</u></a>
+          <a href="https://www.youtube.com/watch?v=TklLSU8NPxE" target="_blank" style="color: DodgerBlue; margin-top: 7px">
+          <u>Guide to enter</u></a>
+                  
                   </p>
 
                 </div>
