--- a/en/fighting.html
+++ b/en/fighting.html
@@ -220,13 +220,30 @@
 					~ Tournament game ~ 
 					<br>
           Street Fighter 3rd Strike
-					<br>
-          <br>
+        </span>
+        <span align="left" style="font-size: 13px; line-height: 1.6;">
 					~ Rules ~ 
 					<br>
-					We'll add them later
-					<br>
-					<br>
+					- The tournament format is double elimination. If you lose once, 
+          you are not out of the tournament yet but if you lose again, then
+          you are eliminated from the tournament
+          <br>
+          - Sets are ft2. Meaning out of 3 set, the first person to get 2 wins takes the set.
+          <br>
+          - All characters are allowed for play
+          <br>
+          - Only the loser of the match is allowed to switch characters. 
+          Winner has to stay on the character they have chosen
+          <br>
+          - There will be controllers for players to use in the tournament (xbox 360 style controllers), 
+          but you can of course bring your own controller. Only exception 
+          is a controller with built in macro buttons
+          <br>
+          - The winner of the tournament has to face a formidable opponent. 
+          The winner of the tournament will still get the prize money if they 
+          lose this challenge. Winning the challenge gives you bragging rights
+        </span>
+        <span align="left">
 					~ Previous tournaments brackets ~  
 					<br>
           07.03.2025 - Super Street Fighter 2 Turbo
