--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -221,13 +221,29 @@
 					~ Turnauksen peli ~ 
 					<br>
 					Street Fighter 3rd Strike
-					<br>
-          <br>
+        </span>
+        <span align="left" style="font-size: 13px; line-height: 1.6;">
 					~ Säännöt ~ 
 					<br>
-					Tulee myöhemmin
+					- Turnausmuoto on tuplapudotus. Jos häviät kerran, et ole 
+          vielä poissa turnauksesta, mutta häviät uudelleen ja putoat turnauksesta
+					<br style="font-size: 7px;"/>
+					- Matsit ovat ft2. Tämä tarkoittaa että kolmesta erästä 
+          ensimmäinen, joka voittaa 2 erää voittaa setin
 					<br>
+					- Kaikilla hahmoilla voi pelata
 					<br>
+					- Yhden matsin jälkeen, hävinnyt pelaaja voi vaihtaa hahmoa. 
+          Voittaneen pelaajan pitää pelata samalla hahmolla kuin viime matsissa
+					<br>
+          - Pelaajille on käytettävissä turnauksen ohjaimia (xbox 360 tyylin ohjaimia),
+          mutta voit tietysti tuoda oman ohjaimen. Ainoa poikkeus
+          on ohjain, jossa on sisäänrakennetut makropainikkeet
+					<br>
+					- Turnauksen voittaja kohtaa vahvan vastustaja. Jos häviät, 
+          saat silti palkintorahat, mutta menetät kehumisoikeudet
+        </span>
+        <span align="left">
 					~ Viime turnauksien haarukointi ~ 
 					<br>
           07.03.2025 - Super Street Fighter 2 Turbo
