--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -228,8 +228,8 @@
 					- Turnausmuoto on tuplapudotus. Jos häviät kerran, et ole 
           vielä poissa turnauksesta, mutta häviät uudelleen ja putoat turnauksesta
 					<br style="font-size: 7px;"/>
-					- Matsit ovat ft2. Tämä tarkoittaa että kolmesta erästä 
-          ensimmäinen, joka voittaa 2 erää voittaa setin
+					- Matsit ovat ft2. Tämä tarkoittaa että kolmesta pelistä 
+          ensimmäinen, joka voittaa 2 peliä voittaa setin
 					<br>
 					- Kaikilla hahmoilla voi pelata
 					<br>
