--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -229,7 +229,7 @@
           vielä poissa turnauksesta, mutta häviät uudelleen ja putoat turnauksesta
 					<br style="font-size: 7px;"/>
 					- Matsit ovat ft2. Tämä tarkoittaa että kolmesta pelistä 
-          ensimmäinen, joka voittaa 2 peliä voittaa setin
+          ensimmäinen joka voittaa 2 peliä, voittaa setin
 					<br>
 					- Kaikilla hahmoilla voi pelata
 					<br>
