--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -228,7 +228,7 @@
 					- Turnausmuoto on tuplapudotus. Jos häviät kerran, et ole 
           vielä poissa turnauksesta, mutta häviät uudelleen ja putoat turnauksesta
 					<br style="font-size: 7px;"/>
-					- Matsit ovat ft2. Tämä tarkoittaa että kolmesta pelistä 
+					- Matsit ovat ft2. Tämä tarkoittaa että 3 pelistä 
           ensimmäinen joka voittaa 2 peliä, voittaa setin
 					<br>
 					- Kaikilla hahmoilla voi pelata
