--- a/en/fighting.html
+++ b/en/fighting.html
@@ -244,6 +244,12 @@
           lose this challenge. Winning the challenge gives you bragging rights
         </span>
         <span align="left">
+					~ Tips and info PDF ~ 
+					<br>
+					<a href="../assets/pdf/street_fighter_3rd_strike_general_tips_and_info.pdf" target="_blank" style="color: DodgerBlue;">
+					General tips and information for playing Street Fighter 3rd Strike
+					</a>
+					<br>
 					~ Previous tournaments brackets ~  
 					<br>
           07.03.2025 - Super Street Fighter 2 Turbo
