--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -244,6 +244,12 @@
           saat silti palkintorahat, mutta menetät kehumisoikeudet
         </span>
         <span align="left">
+          ~ Opastus PDF ~ 
+					<br>
+					<a href="../assets/pdf/street_fighter_3rd_strike_general_tips_and_info.pdf" target="_blank" style="color: DodgerBlue;">
+					Yleisiä ohjeita ja vinkkejä Street Fighter 3rd Strike:n pelaamiseen (englanniksi)
+					</a>
+					<br>
 					~ Viime turnauksien haarukointi ~ 
 					<br>
           07.03.2025 - Super Street Fighter 2 Turbo
