--- a/en/videogames.html
+++ b/en/videogames.html
@@ -128,7 +128,24 @@
 			  <br>
 			  In addition, we are organizing a monthly fighting game tournament and LAN party twice a year, with the first one being for 50 people.
             </span></p>
-
+            <p class="hero-subtitle" align="center" style="hero-banner; color:red; background-color:black"> 
+              <span style="font-size:50px;">
+              NOTE: 
+              </span>
+              starting 26.4.2025, we 
+              are taking a small summer
+              break and continuing 
+              <br>
+              <br>
+              video games evenings in june 
+              <br>
+              <br>
+              Exact date will be
+              announced in the last week of may.
+              <br>
+              <br>  
+            </p>
+            <br>
             <a href="#Guide"><button class="btn skewBg">Read More</button></a>
 
       </section>
