--- a/fi/lautapeli.html
+++ b/fi/lautapeli.html
@@ -126,7 +126,23 @@
 			  Yli 45 uniikkia lautapeliä, ja useampi kappale suosittuja pelejä.
             </span>
 			</p>
-
+      <p class="hero-subtitle" align="center" style="hero-banner; color:red; background-color:black"> 
+        <span style="font-size:50px;">
+        HUOM: 
+        </span>
+        26.4.2025 alkaen, otamme lyhyen kesäloma tauon. Jatkamme
+        <br>
+        <br>        
+        Lautapeli-iltoja syyskuussa
+        <br>
+        <br>
+        Ilmoitamme tarkan päiväyksen 
+        <br>
+        toukukuun viimeisellä viikolla.
+        <br>
+        <br>  
+      </p>
+        <br>  
             <a href="#Guide"><button class="btn skewBg">Lue lisää</button></a>
 
       </section>
