--- a/en/boardgames.html
+++ b/en/boardgames.html
@@ -126,7 +126,24 @@
 			  Over 45 unique boardgames with multiples of the popular games. 
             </span>
 			</p>
-
+			<p class="hero-subtitle" align="center" style="hero-banner; color:red; background-color:black"> 
+        <span style="font-size:50px;">
+        NOTE: 
+        </span>
+        starting 26.4.2025, we 
+        are taking a small summer
+        break and continuing 
+        <br>
+        <br>
+        board games evenings in september
+        <br>
+        <br>
+        Exact date will be
+        announced in the last week of may.
+        <br>
+        <br>  
+      </p>
+      <br>
             <a href="#Guide"><button class="btn skewBg">Read More</button></a>
 
       </section>
