--- a/fi/index.html
+++ b/fi/index.html
@@ -96,6 +96,23 @@
 			<br>
 			<p class="hero-subtitle" align="center" style="hero-banner"> Pyyhkäise vasemmalle <br> Klikkaa avataksesi sivu</p>
 			
+      <p class="hero-subtitle" align="center" style="hero-banner; color:red; background-color:black"> 
+        <span style="font-size:50px;">
+        HUOM: 
+        </span>
+        26.4.2025 alkaen, otamme lyhyen kesäloma tauon. Jatkamme
+        <br>
+        <br>
+        Videopeli-iltoja kesäkuussa
+        <br><br>
+        
+        Lautapeli-iltoja syyskuussa
+        <br>
+        <br>
+        Ilmoitamme tarkat päiväykset toukukuun viimeisellä viikolla.
+        <br>
+        <br>  
+      </p>
 			<br>
 
             <ul class="has-scrollbar">
