--- a/fi/videopeli.html
+++ b/fi/videopeli.html
@@ -128,7 +128,23 @@
 			  <br>
 			  Tämän lisäksi, järjestämme kuukausittaiset taistelupeli turnaukset ja lanit kahdesti vuodessa.
             </span></p>
-
+            <p class="hero-subtitle" align="center" style="hero-banner; color:red; background-color:black"> 
+              <span style="font-size:50px;">
+              HUOM: 
+              </span>
+              26.4.2025 alkaen, otamme lyhyen kesäloma tauon. Jatkamme
+              <br>
+              <br>        
+              Videopeli-iltoja kesäkuussa
+              <br>
+              <br>
+              Ilmoitamme tarkan päiväyksen 
+              <br>
+              toukukuun viimeisellä viikolla.
+              <br>
+              <br>  
+            </p>
+              <br>
             <a href="#Guide"><button class="btn skewBg">Lue lisää</button></a>
 
       </section>
