--- a/en/videogames.html
+++ b/en/videogames.html
@@ -126,7 +126,7 @@
 			  8 PC's, 2 PS4, 2 PS3, 40 controllers, racing wheel, jackbox party pack.
 			  <br>
 			  <br>
-			  In addition, we are organizing a monthly fighting game tournament and LAN party twice a year, with the first one being for 50 people.
+			  In addition, we are organizing a monthly fighting game tournament.
             </span></p>
             <p class="hero-subtitle" align="center" style="hero-banner; color:red; background-color:black"> 
               <span style="font-size:50px;">
