--- a/fi/videopeli.html
+++ b/fi/videopeli.html
@@ -126,7 +126,7 @@
 			  8 Pöytäkonetta, 2 PS4, 2 PS3, 40 ohjainta, rattiohjain, jackbox party pack.
 			  <br>
 			  <br>
-			  Tämän lisäksi, järjestämme kuukausittaiset taistelupeli turnaukset ja lanit kahdesti vuodessa.
+			  Tämän lisäksi, järjestämme kuukausittaiset taistelupeli turnaukset.
             </span></p>
             <p class="hero-subtitle" align="center" style="hero-banner; color:red; background-color:black"> 
               <span style="font-size:50px;">
