--- a/en/archive.html
+++ b/en/archive.html
@@ -61,11 +61,11 @@
 			<li class="navbar-item">
             <a href="roleplaying.html" class="navbar-link skewBg" data-nav-link>Role-playing club</a>
             </li>
-			
+			<!--
 			<li class="navbar-item">
             <a href="fighting.html" class="navbar-link skewBg" data-nav-link>Fighting game tournament</a>
             </li>
-			
+			-->
 			<li class="navbar-item">
             <a href="../fi/arkisto.html" class="navbar-link skewBg" data-nav-link>Fin</a>
             </li>
@@ -112,6 +112,18 @@
 
           <div class="hero-content">
 
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+
+
 			<a href="../archive/fighting2.html">
             <h1 class="h1 hero-title4" style="font-size: 40px;">
               Fighting Game Tournament <span class="span">Tekken 3</span>  
@@ -122,6 +134,7 @@
 			
 			<br>
 			<br>
+      <br>
 			
 			<a href="../archive/lan-party.html">
             <h1 class="h1 hero-title4" style="font-size: 40px;">
@@ -131,14 +144,27 @@
             </h1>
 			</a>
 			
-      <br>
 			<br>
+			<br>
+      <br>
 
 			<a href="../archive/fightingsf2st.html">
             <h1 class="h1 hero-title4" style="font-size: 40px;">
               Fighting Game Tournament <span class="span">Super Street Fighter 2 Turbo</span> 
 			  <br>
 			  7.3.2025
+            </h1>
+			</a>
+
+      <br>
+			<br>
+      <br>
+
+			<a href="../archive/fightingsf3rd.html">
+            <h1 class="h1 hero-title4" style="font-size: 40px;">
+              Fighting Game Tournament <span class="span">Street Fighter 3rd strike</span> 
+			  <br>
+			  25.4.2025
             </h1>
 			</a>
 
