--- a/en/home.html
+++ b/en/home.html
@@ -205,6 +205,14 @@
           </h2>
 			<br>
 			<br>
+      <p class="hero-subtitle" align="center" style="hero-banner; color: white">
+        <i>
+        Nothing at this moment. Sorry.
+        <br>
+        Probably a fighting game tournament in the end of june.
+        </i>
+      </p>
+      <!--
 			<p class="hero-subtitle" align="center" style="hero-banner"> Click picture to open site</p>
 			
 			<br>
@@ -271,7 +279,7 @@
 
               </div>
             </li>
-
+            -->
                      </ul>
 
         </div>
