--- a/en/videogames.html
+++ b/en/videogames.html
@@ -61,11 +61,11 @@
             <li class="navbar-item">
               <a href="roleplaying.html" class="navbar-link skewBg" data-nav-link>Role-playing club</a>
             </li>
-			
+			<!--
 			<li class="navbar-item">
             <a href="fighting.html" class="navbar-link skewBg" data-nav-link>Fighting game tournament</a>
             </li>
-			
+      -->
 			<li class="navbar-item">
             <a href="../fi/videopeli.html" class="navbar-link skewBg" data-nav-link>Fin</a>
             </li>
@@ -361,13 +361,21 @@
           </h2>
 			<br>
 			<br>
+      <p class="hero-subtitle" align="center" style="hero-banner; color: white">
+        <i>
+        Nothing at this moment. Sorry.
+        <br>
+        Probably a fighting game tournament in the end of june.
+        </i>
+      </p>
+      <!--
 			<p class="hero-subtitle" align="center" style="hero-banner"> Click picture to open site</p>
 			
 			<br>
           <ul class="blog-list">
 
-            <li>
 
+            <li>
 			<a href="fighting.html">
               <div class="blog-card">
 
@@ -399,9 +407,9 @@
                   </h3>
 					</a>
                   <p class="card-text">
-					Game: <br>
+          Game: <br>
 					Street Fighter 3rd Strike
-					<br>
+          <br>
 					<br>
 					Location: <br>
 					Mukkulankatu 19 (LAB university of applied sciences campus) Event arena, 15210 Lahti <br>
@@ -409,9 +417,9 @@
 					<br>
 					Time & date: <br>
 					25.04.2025 Friday @ 16:00
-					<br>
-					<br>
-					Everyone over 13 years old can participate for free
+          <br>
+          <br>
+          Everyone over 13 years old can participate for free
           <br>
           <br>
           Training: <br>
@@ -420,14 +428,14 @@
           <a href="https://maps.app.goo.gl/fhxNVwUgdP3sZAvv9" target="_blank" style="color: DodgerBlue;"><u>Google Maps</u></a>
           <a href="https://www.youtube.com/watch?v=TklLSU8NPxE" target="_blank" style="color: DodgerBlue; margin-top: 7px">
           <u>Guide to enter</u></a>
-                  
-                  </p>
+                    
+        </p>
 
                 </div>
 
               </div>
             </li>
-
+            -->
                      </ul>
 
         </div>
