--- a/fi/arkisto.html
+++ b/fi/arkisto.html
@@ -61,11 +61,11 @@
 			<li class="navbar-item">
               <a href="roolipeli.html" class="navbar-link skewBg" data-nav-link>Roolipelikerho</a>
             </li>
-			
+			<!--
 			<li class="navbar-item">
             <a href="tappelu.html" class="navbar-link skewBg" data-nav-link>Taistelupeli-turnaus</a>
             </li>
-			
+      -->
 			<li class="navbar-item">
             <a href="../en/archive.html" class="navbar-link skewBg" data-nav-link>Eng</a>
             </li>
@@ -111,13 +111,19 @@
 
           <div class="hero-content">
 
-			<br>
-			<br>
-      <br>
-      <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
 			
 			<a href="../arkisto/tappelu2.html">
-            <h1 class="h1 hero-title4" style="font-size: 55px;">
+            <h1 class="h1 hero-title4" style="font-size: 40px;">
               Taistelupeli turnaus <span class="span">Tekken 3</span>  
 			  <br>
 			  31.1.2025
@@ -126,23 +132,37 @@
 			
 			<br>
 			<br>
+      <br>
 
 			<a href="../arkisto/lanit.html">
-            <h1 class="h1 hero-title4" style="font-size: 55px;">
+            <h1 class="h1 hero-title4" style="font-size: 40px;">
               Kaptam Winter <span class="span">Lanit</span> 
 			  <br>
 			  14-16.2.2025
             </h1>
 			</a>
 
-      <br>
 			<br>
+			<br>
+      <br>
 
 			<a href="../arkisto/tappelusf2st.html">
-            <h1 class="h1 hero-title4" style="font-size: 55px;">
+            <h1 class="h1 hero-title4" style="font-size: 40px;">
               Taistelupeli turnaus <span class="span" style="font-size: 37px;">Super Street Fighter 2 Turbo</span> 
 			  <br>
 			  7.3.2025
+            </h1>
+			</a>
+
+			<br>
+			<br>
+      <br>
+
+			<a href="../arkisto/tappelusf3rd.html">
+            <h1 class="h1 hero-title4" style="font-size: 40px;">
+              Taistelupeli turnaus <span class="span" style="font-size: 37px;">Street Fighter 3rd strike</span> 
+			  <br>
+			  25.4.2025
             </h1>
 			</a>
 			
