--- a/fi/index.html
+++ b/fi/index.html
@@ -196,6 +196,14 @@
           </h2>
 			<br>
 			<br>
+      <p class="hero-subtitle" align="center" style="hero-banner; color: white">
+        <i>
+        Ei mitään tällä hetkellä. Sori. 
+        <br>
+        Kesäkuun lopussa luultavasti taistelupeli turnaus. 
+        </i>
+      </p>
+      <!--
 			<p class="hero-subtitle" align="center" style="hero-banner"> Klikkaa avataksesi sivu</p>
 			
 			<br>
@@ -260,7 +268,7 @@
 
               </div>
             </li>
-
+            -->
                      </ul>
 
         </div>
