--- a/fi/videopeli.html
+++ b/fi/videopeli.html
@@ -61,11 +61,11 @@
             <li class="navbar-item">
               <a href="roolipeli.html" class="navbar-link skewBg" data-nav-link>Roolipelikerho</a>
             </li>
-			
+			<!--
 			<li class="navbar-item">
             <a href="tappelu.html" class="navbar-link skewBg" data-nav-link>Taistelupeli-turnaus</a>
             </li>
-			
+      -->
 			<li class="navbar-item">
             <a href="../en/videogames.html" class="navbar-link skewBg" data-nav-link>Eng</a>
             </li>
@@ -360,6 +360,14 @@
           </h2>
 			<br>
 			<br>
+      <p class="hero-subtitle" align="center" style="hero-banner; color: white">
+        <i>
+        Ei mitään tällä hetkellä. Sori. 
+        <br>
+        Kesäkuun lopussa luultavasti taistelupeli turnaus. 
+        </i>
+      </p>
+      <!--
 			<p class="hero-subtitle" align="center" style="hero-banner"> Klikkaa avataksesi sivu</p>
 			
 			<br>
@@ -424,7 +432,7 @@
 
               </div>
             </li>
-
+            -->
                      </ul>
 
         </div>
